# Storage

./: CMakeLists.txt  README.md
include/: DataStorage.h  ReadableStorage.h  ReadableStorageA.h  ReadableStorageB.h  Storage.h
src/: DataStorage.cpp  ReadableStorageA.cpp  ReadableStorageB.cpp  main.cpp
